<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PlugText</string>
    <string name="action_settings">Settings</string>
    <string name="action_open_file">Open file</string>
    <string name="action_save_file">Save File</string>
    <string name="action_search">Search</string>
    <string name="action_forward">Forward</string>
    <string name="action_back">Back</string>
    <string name="content_of_file">Content of</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="regex_creator_exception">Error in regex parsing and creating</string>
    <string name="plugin_load_exception">Error in plugin loading</string>
    <string name="plugin_version_number_incorrect">Incorrect plugin version</string>
    <string name="plugin_file_parsing_exception">Error in plugin syntax</string>
    <string name="plugin_api_version_mismatch">Plugin API version mismatch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="file_opening_failed">File opening failed</string>
    <string name="file_saving_failed">File saving failed</string>
    <string name="plugins_loaded_successfully">Plugins reloaded successfully</string>
    <string name="language_none">None</string>
    <string name="plugin_load_error">Plugin loading error</string>
    <string name="plugins_load_error">Plugins loading error</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_general_language">Language</string>
    <string name="pref_title_general_languages">Languages</string>
    <string-array name="pref_general_list_languages">
        <item>English</item>
        <item>Polish</item>
    </string-array>
    <string-array name="pref_general_list_languages_values">
        <item>en</item>
        <item>pl</item>
    </string-array>

    <!-- Editor settings -->
    <string name="pref_header_editor">Editor</string>

    <string name="pref_title_editor_plugin_db_update">Update plugins database</string>
    <string name="pref_title_editor_background_color">Background color</string>
    <string name="pref_title_editor_bultins_color">Builtins color</string>
    <string name="pref_title_editor_comments_color">Comments color</string>
    <string name="pref_title_editor_keywords_color">Keywords color</string>
    <string name="pref_title_editor_normal_text_color">Normal text color</string>
    <string name="pref_title_editor_numbers_color">Numbers color</string>
    <string name="pref_title_editor_preprocessors_color">Preprocessor directives color</string>
</resources>
